@@ -2051,16 +2051,6 @@ A dictionary or other mapping object used to store an
 object's (writable) attributes.
 \end{memberdesc}
 
-\begin{memberdesc}[object]{__methods__}
-\deprecated{2.2}{Use the built-in function \function{dir()} to get a
-list of an object's attributes.  This attribute is no longer available.}
-\end{memberdesc}
-
-\begin{memberdesc}[object]{__members__}
-\deprecated{2.2}{Use the built-in function \function{dir()} to get a
-list of an object's attributes.  This attribute is no longer available.}
-\end{memberdesc}
-
 \begin{memberdesc}[instance]{__class__}
 The class to which a class instance belongs.
 \end{memberdesc}
